syntax = "proto3";

package grpc.naming_server.eason;

option go_package = "github.com/PsychologicalExperiment/backEnd/api/eason";

service EasonNamingService {
  rpc RegisterServer(RegisterServerReq) returns (RegisterServerResp);
  rpc UnRegisterServer(UnRegisterServerReq) returns (UnRegisterServerResp);
  rpc DiscoverServer(DiscoverServerReq) returns (DiscoverServerResp);
}

message RegisterServerReq {
  string namespace = 1;
  string svr_name = 2;
  string addr = 3;
}

message RegisterServerResp {
  uint32 code = 1;
  string msg = 2;
}

message UnRegisterServerReq {
  string namespace = 1;
  string svr_name = 2;
  string addr = 3;
}

message UnRegisterServerResp {
  uint32 code = 1;
  string msg = 2;
}

message DiscoverServerReq {
  string namespace = 1;
  string svr_name = 2;
}

message DiscoverServerResp {
  uint32 code = 1;
  string msg = 2;
  string ip = 3;
  uint32 port = 4;
}